--- a/D3_data_journalism/assets/css/d3Style.css
+++ b/D3_data_journalism/assets/css/d3Style.css
@@ -26,8 +26,11 @@
 /* font size dependent on radius, see app.js */
 .stateText {
   font-family: sans-serif;
+  font-size: 9px;
   fill: #fff;
   text-anchor: middle;
+  text-align: center;
+  line-height: -10;
 }
 
 .stateCircle {
